# OpenShard

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
crates/ai/: Cargo.toml
crates/ai/src/: lib.rs
crates/chat/: Cargo.toml
crates/chat/src/: lib.rs
crates/combat/: Cargo.toml
crates/combat/src/: armor.rs  lib.rs  weapons.rs
crates/config/: Cargo.toml
crates/config/src/: default.toml  lib.rs  tests.rs
crates/entities/: Cargo.toml
crates/entities/src/: component.rs  entity.rs  lib.rs  registry.rs  serial.rs
crates/events/: Cargo.toml
crates/events/src/: bus.rs  lib.rs  queue.rs
crates/gateway/: Cargo.toml
crates/gateway/src/: connection.rs  lib.rs  server.rs
crates/guilds/: Cargo.toml
crates/guilds/src/: lib.rs
crates/housing/: Cargo.toml
crates/housing/src/: lib.rs
crates/items/: Cargo.toml
crates/items/src/: consume.rs  containers.rs  decay.rs  doors.rs  drag.rs  equip.rs  lib.rs  mounts.rs  spawn.rs  stack.rs  trigger.rs  weight.rs
crates/login/: Cargo.toml
crates/login/src/: accounts.rs  auth.rs  lib.rs  password.rs  session.rs
crates/magic/: Cargo.toml
crates/magic/src/: lib.rs  spells.rs
crates/metrics/: Cargo.toml
crates/metrics/src/: lib.rs
crates/movement/: Cargo.toml
crates/movement/src/: lib.rs  pace.rs  path.rs  sequence.rs  walk.rs
crates/npc/: Cargo.toml
crates/npc/src/: lib.rs  spawn.rs  vendor.rs
crates/persistence/: Cargo.toml
crates/persistence/src/: journal.rs  lib.rs  pg.rs  record.rs  sqlite.rs  store.rs
crates/plugins/: Cargo.toml
crates/plugins/src/: lib.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: access.rs  casting.rs  codec.rs  combat.rs  containers.rs  context.rs  direction.rs  feature.rs  feedback.rs  gump.rs  huffman.rs  items.rs  lib.rs  login.rs  mobile.rs  packet.rs  properties.rs  seed.rs  skill.rs  speech.rs  spellbook.rs  target.rs  vendor.rs  version.rs  world.rs
crates/scripting/: Cargo.toml
crates/scripting/examples/: benchmark.rs
crates/scripting/src/: engine.rs  lib.rs
crates/scripting/src/engine/: host.rs  ops.rs
crates/server/: Cargo.toml
crates/server/src/: boot.rs  dispatch.rs  game.rs  main.rs  scripting.rs  session.rs  shard.rs
crates/server/tests/: login_flow.rs
crates/skills/: Cargo.toml
crates/skills/src/: curves.rs  lib.rs
crates/state/: Cargo.toml
crates/state/src/: components.rs  lib.rs  obstruct.rs  runtime.rs  sectors.rs
crates/world/: Cargo.toml
crates/world/examples/: lod_bench.rs
crates/world/src/: admin.rs  components.rs  doorgen.rs  events.rs  gm.rs  lib.rs  map.rs  rng.rs  skills.rs  spawner.rs  terrain.rs  tick.rs  tiledata.rs  uop.rs
crates/world/src/tick/: command.rs  context.rs  death.rs  decor.rs  defaults.rs  enter.rs  fields.rs  interest_tests.rs  motion.rs  persist.rs  persistence_tests.rs  skills_wire.rs  spawn.rs  spawners.rs  speech.rs  spells.rs  staff.rs  status.rs  status_tests.rs  tests.rs
docs/: architecture.md  roadmap.md  style.md
