[package]
name = "openshard-ai"
description = "NPC behaviour: brains, aggro, wandering, and scripted overrides."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
openshard-combat.workspace = true
openshard-items.workspace = true
openshard-entities.workspace = true
openshard-movement.workspace = true
openshard-protocol.workspace = true
openshard-state.workspace = true
