[package]
name = "openshard-combat"
description = "Combat resolution: swing timers, damage, resistances, notoriety."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
openshard-entities.workspace = true
openshard-gateway.workspace = true
openshard-movement.workspace = true
openshard-protocol.workspace = true
openshard-skills.workspace = true
openshard-state.workspace = true
