[package]
name = "openshard-events"
description = "Typed, deterministic, double-buffered event bus with independent reader cursors."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
