[package]
name = "openshard-gateway"
description = "Accepts client TCP connections and pumps encoded packets to and from the world server."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
openshard-protocol.workspace = true
# Only the features the adapter actually uses. `tokio = "full"` would pull in
# process spawning, signals and fs for a crate that opens one socket.
tokio = { workspace = true, features = ["net", "io-util", "rt", "sync", "macros"] }
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
