[package]
name = "openshard-guilds"
description = "Guilds: membership, ranks, alliances, and wars."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
