[package]
name = "openshard-housing"
description = "Player houses: placement, customisation, lockdowns, and secures."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
