[package]
name = "openshard-items"
description = "Item definitions, containers, stacking, decay, and equipment layers."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
openshard-entities.workspace = true
openshard-gateway.workspace = true
openshard-protocol.workspace = true
openshard-state.workspace = true
tracing.workspace = true
