[package]
name = "openshard-login"
description = "Login/auth server: account verification, shard list, and hand-off to the game server."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
