[package]
name = "openshard-magic"
description = "Spells, reagents, casting, and magic resistance."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
