[package]
name = "openshard-movement"
description = "Movement, pathfinding, line of sight, and fastwalk prevention."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
openshard-protocol.workspace = true
