[package]
name = "openshard-persistence"
description = "Async persistence queue and database backends (PostgreSQL / SQLite)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
