[package]
name = "openshard-persistence"
description = "Async persistence queue and database backends (PostgreSQL / SQLite)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
async-trait.workspace = true
openshard-entities.workspace = true
rusqlite = { version = "0.32", features = ["bundled"] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["rt", "sync"] }
tokio-postgres = "0.7"

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt", "net", "time", "sync"] }
