[package]
name = "openshard-plugins"
description = "Plugin manifest loading, lifecycle, and isolation."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
