[package]
name = "openshard-protocol"
description = "Ultima Online wire protocol: client versioning, feature gates, packet encode/decode."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
