[package]
name = "openshard-scripting"
description = "TypeScript runtime (deno_core / V8) with hot reload and the script-facing API."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
deno_core.workspace = true
serde.workspace = true
thiserror.workspace = true

[dev-dependencies]
# The benchmark hosts the isolate inside a Tokio runtime, as the real shard does
# under `#[tokio::main]`, so V8's background GC/compilation tasks are honoured and
# the numbers are representative. The library itself needs no async.
tokio.workspace = true
