[package]
name = "openshard-skills"
description = "Skill definitions, usage checks, and gain curves."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
openshard-entities.workspace = true
openshard-state.workspace = true
