[package]
name = "openshard-state"
description = "The world's runtime state: components, the spatial index, and the seeded generator every system operates on."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
openshard-entities.workspace = true
openshard-events.workspace = true
openshard-gateway.workspace = true
openshard-movement.workspace = true
openshard-protocol.workspace = true
