[package]
name = "openshard-world"
description = "The simulation: game loop, spatial index, and composition of every gameplay system."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
