[package]
name = "openshard-world"
description = "The simulation: game loop, spatial index, and composition of every gameplay system."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
openshard-entities.workspace = true
openshard-gateway.workspace = true
openshard-events.workspace = true
openshard-movement.workspace = true
openshard-ai.workspace = true
openshard-chat.workspace = true
openshard-combat.workspace = true
openshard-items.workspace = true
openshard-magic.workspace = true
openshard-npc.workspace = true
openshard-persistence.workspace = true
openshard-protocol.workspace = true
openshard-skills.workspace = true
openshard-state.workspace = true
tracing.workspace = true
